--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 <body>
 	<form id="form1" onsubmit="getFormvalue()">
 		First name: <input type="text" name="fname" id="fname" ><br>
-		Last name: <input type="text" name="lname" name="lname" ><br>
+		Last name: <input type="text" name="lname" id="lname" ><br>
 		<input type="submit" value="Submit">
 	</form>
 	
